@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix for postgres with alternate hardcoded port numbers
+
 0.000005  2018-01-29 09:00:44-08:00 America/Los_Angeles
 
     - ENV var safety
